test/parser/Queries/syntax_errors/fail_K-ForExprWithout-56.xq
(:* $ *******foo************foo**************foo***************: ne )
(: Test:            where               $       :)
(: Written by: Frans ne  Englich               let   for             :)
(: Date: 2006-10-05T18:29:37+02:00       $          eq        :)foo
(: Purpose:  let Apply fn:count() to a for-expressionfoo(#2) $ .    :)
(:*********** for ********************foo**************foo** ne ****foofoo*)foo
count(for $i in (1, 2, timezone-from-time(current-time() for )) ne  return ($ $i)) eq 6or
(for $iin (1, 2, timezone-from-time(current-time()) return ($i, $i)) eq 4
